--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -47,6 +47,7 @@
         <item>Tel Info</item>
         <item>什么是Handler</item>
         <item>第一事件</item>
+        <item>监听滑动手势</item>
     </string-array>
 
     <!-- index 2-->
