--- a/wan/src/main/res/values/attr.xml
+++ b/wan/src/main/res/values/attr.xml
@@ -15,4 +15,14 @@
         <attr name="msv_animateViewChanges" format="boolean" />
     </declare-styleable>
 
+    <declare-styleable name="SubmitView">
+        <attr name="sv_bindEditText1" format="reference" />
+        <attr name="sv_bindEditText2" format="reference" />
+        <attr name="sv_bindEditText3" format="reference" />
+    </declare-styleable>
+
+    <declare-styleable name="CollectView">
+        <attr name="cv_uncheckedColor" format="color|reference" />
+    </declare-styleable>
+
 </resources>
