--- a/wan/src/main/res/values/colors.xml
+++ b/wan/src/main/res/values/colors.xml
@@ -4,12 +4,7 @@
     <!--<color name="colorPrimaryDark">#303F9F</color>-->
     <!--<color name="colorAccent">#FF4081</color>-->
 
-
-
     <!--主题色-->
-    <color name="main">#4282f4</color>
-    <color name="accent">#f86734</color>
-    <color name="transparent">#00000000</color>
     <color name="white">#ffffff</color>
     <color name="white_alpha">#ccffffff</color>
     <color name="black_pure">#000000</color>
@@ -19,11 +14,62 @@
     <color name="gray_light">#999999</color>
 
 
+
+
+    <color name="bottom_bar_overlay">@color/bg_alpha</color>
+
+    <color name="mine_blur_overlay">@color/background_mask</color>
+    <color name="about_me_blur_overlay">@color/background_mask</color>
+    <color name="scrollbar">#22000000</color>
+    <color name="heart_center">#FFA07C</color>
+
+
+    <color name="basic_ui_action_bar_bg">@color/main</color>
+    <color name="basic_ui_action_bar_icon">@color/text_invert</color>
+    <color name="basic_ui_action_bar_text">@color/text_invert</color>
+    <color name="basic_ui_action_bar_text_alpha">@color/text_invert_alpha</color>
+    <color name="basic_ui_action_bar_bottom_line">@color/line</color>
     <!--loading dialog背景颜色-->
     <color name="basic_ui_dialog_loading_rectangle">@color/transparent</color>
     <!--loading dialog圆圈颜色-->
     <color name="basic_ui_dialog_loading_circle">@color/colorTheme</color>
 
-    <color name="bottom_bar_overlay">@color/bg_alpha</color>
+
+
+
+    <!--通用颜色-->
+    <color name="main">#4282f4</color>
+    <color name="assist">#3cdc86</color>
+    <color name="accent">#f86734</color>
+    <color name="transparent">#00000000</color>
+    <color name="line">#f5f5f5</color>
+    <color name="background">#f5f5f5</color>
+    <color name="background_alpha">#ccf5f5f5</color>
+    <color name="background_mask">#11000000</color>
+    <color name="foreground">#ffffff</color>
+    <color name="foreground_alpha">#ccffffff</color>
+    <color name="foreground_mask">#ccffffff</color>
+    <color name="foreground_top">#f5f5f5</color>
+    <color name="surface">#ffffff</color>
+    <color name="surface_alpha">#ccffffff</color>
+    <color name="surface_mask">#ccffffff</color>
+    <color name="surface_top">#f5f5f5</color>
+    <color name="surface_top_alpha">#ccf5f5f5</color>
+    <color name="surface_top_mask">#11000000</color>
+    <color name="invert">#333333</color>
+    <color name="invert_alpha">#11000000</color>
+    <color name="second">#666666</color>
+    <color name="third">#999999</color>
+    <color name="fourth">#cccccc</color>
+    <!--文字颜色-->
+    <color name="text_main">@color/main</color>
+    <color name="text_accent">@color/accent</color>
+    <color name="text_surface">#333333</color>
+    <color name="text_surface_alpha">#88333333</color>
+    <color name="text_second">#666666</color>
+    <color name="text_third">#999999</color>
+    <color name="text_invert">#ffffff</color>
+    <color name="text_invert_alpha">#88ffffff</color>
+    <color name="text_on_main">#ffffff</color>
 
 </resources>
