--- a/app/src/main/res/layout/activity_arouter.xml
+++ b/app/src/main/res/layout/activity_arouter.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/ic_life_cycle"
+    android:background="@color/bg_public"
     android:orientation="vertical"
     android:gravity="center"
     android:layout_width="match_parent"
