--- a/ui/src/main/res/layout/activity_srf_rv_new.xml
+++ b/ui/src/main/res/layout/activity_srf_rv_new.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_public"
-    android:orientation="vertical">
+    android:background="@color/bg_public">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@id/id_swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
+        <com.transcendence.ui.recyclerview.view.MyRecyclerView
             android:id="@id/id_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
-</LinearLayout>
+
+    <ImageView
+        android:id="@id/id_emptyView"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:background="@color/colorTheme"
+        android:src="@drawable/pic_404" />
+</FrameLayout>
