--- a/ui/src/main/res/values/ids.xml
+++ b/ui/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="id_recyclerView" type="id"/>
     <item name="id_swipeRefreshLayout" type="id"/>
+    <item name="id_emptyView" type="id"/>
 </resources>
