--- a/wan/src/main/res/layout/fragment_navi_wx_public_account_list.xml
+++ b/wan/src/main/res/layout/fragment_navi_wx_public_account_list.xml
@@ -75,7 +75,7 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <include layout="@layout/activity_srf_rv_old" />
+    <!--<include layout="@layout/activity_srf_rv_new" />-->
 
 
 
