--- a/wan/src/main/res/layout/fragment_navi_mine.xml
+++ b/wan/src/main/res/layout/fragment_navi_mine.xml
@@ -41,10 +41,11 @@
                 android:maxLines="1"
                 android:textColor="@color/white"
                 android:textSize="@dimen/title_size"
-                tools:text="我的" />
+                android:text="我的" />
 
 
             <FrameLayout
+                android:id="@+id/fl_right"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
