--- a/wan/src/main/res/layout/fragment_navi_wx_public_account_list.xml
+++ b/wan/src/main/res/layout/fragment_navi_wx_public_account_list.xml
@@ -7,76 +7,12 @@
     android:background="@color/bg_public"
     android:orientation="vertical">
 
-    <LinearLayout
+
+
+    <com.transcendence.ui.recyclerview.view.RefreshLayout
+        android:id="@+id/refreshView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <View
-            android:id="@+id/title_status"
-            android:layout_width="match_parent"
-            android:layout_height="22dp"
-            android:background="@color/colorGitHubBlack" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:background="@color/colorGitHubBlack"
-            >
-
-            <FrameLayout
-                android:id="@+id/flBack"
-                android:layout_width="40dp"
-                android:layout_height="match_parent"
-                android:visibility="gone"
-                android:background="@drawable/selector_back">
-
-                <ImageView
-                    android:id="@+id/ivLeft"
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/dp_10"
-                    android:gravity="center"
-                    android:src="@mipmap/ic_article"
-                    />
-            </FrameLayout>
-
-
-            <TextView
-                android:id="@+id/tvTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:ellipsize="end"
-                android:maxLines="1"
-                tools:text="公众号"
-                android:textColor="@color/white"
-                android:textSize="@dimen/title_size" />
-
-
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginRight="@dimen/standard_padding"
-                android:layout_alignParentRight="true">
-
-                <ImageView
-                    android:id="@+id/ivRight"
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="center_vertical"
-                    android:gravity="center"
-                    />
-            </FrameLayout>
-
-        </RelativeLayout>
-    </LinearLayout>
-
-    <!--<include layout="@layout/activity_srf_rv_new" />-->
-
+        android:layout_height="match_parent"/>
 
 
 </LinearLayout>
