--- a/wan/src/main/res/values/dimens.xml
+++ b/wan/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="action_bar_bottom_line_height">0dp</dimen>
     <dimen name="bottom_bar_height">49dp</dimen>
     <dimen name="button_height">44dp</dimen>
+    <dimen name="tab_layout_height">45dp</dimen>
 
     <dimen name="round_radius">12dp</dimen>
     <dimen name="round_radius_small">3dp</dimen>
