--- a/wan/src/main/res/values/styles.xml
+++ b/wan/src/main/res/values/styles.xml
@@ -46,4 +46,30 @@
     <integer name="swipeback_activity_duration">300</integer>
 
 
+
+    <!--tab文字背景 -->
+    <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">@color/colorGitHubGreenPress</item>
+        <item name="tabIndicatorHeight">2dp</item>
+        <item name="tabBackground">?attr/selectableItemBackground</item>
+        <item name="tabTextAppearance">@style/MyCustomTabTextAppearance</item>
+        <item name="tabSelectedTextColor">@color/colorGitHubGreen</item>
+    </style>
+
+
+    <style name="MyCustomTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <!--设置Tablayout字体大小-->
+    <style name="TabLayoutTextExtendSize">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TabLayoutTextNormalSize">
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
