--- a/app/src/main/res/layout/activity_qzone_header.xml
+++ b/app/src/main/res/layout/activity_qzone_header.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:src="@drawable/ic_qzone_header_fk"
+        android:src="@drawable/ic_header_fk"
         android:scaleType="centerCrop"
         />
 
