--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -119,6 +119,8 @@
         <item>滴滴Splash</item>
         <item>全屏雷达扫描</item>
         <item>仿小米计算器</item>
+        <item>Android调JS</item>
+        <item>PDF DownLoad</item>
     </string-array>
 
 
